# game.libretro.vice_xpet

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml
.github/workflows/: sync-addon-metadata-translations.yml
debian/: changelog.in  control  copyright
depends/common/vice/: 0001-Set-core-options-in-retro_set_environment.patch  CMakeLists.txt  vice.txt
depends/common/vice_xpet/: CMakeLists.txt  vice_xpet.txt
game.libretro.vice/: addon.xml.in
game.libretro.vice/resources/: buttonmap.xml  settings.xml
game.libretro.vice/resources/language/English/: strings.po
game.libretro.vice/resources/language/resource.language.af_za/: strings.po
game.libretro.vice/resources/language/resource.language.am_et/: strings.po
game.libretro.vice/resources/language/resource.language.ar_dz/: strings.po
game.libretro.vice/resources/language/resource.language.ar_sa/: strings.po
game.libretro.vice/resources/language/resource.language.ast_es/: strings.po
game.libretro.vice/resources/language/resource.language.az_az/: strings.po
game.libretro.vice/resources/language/resource.language.be_by/: strings.po
game.libretro.vice/resources/language/resource.language.bg_bg/: strings.po
game.libretro.vice/resources/language/resource.language.bs_ba/: strings.po
game.libretro.vice/resources/language/resource.language.ca_es/: strings.po
game.libretro.vice/resources/language/resource.language.cs_cz/: strings.po
game.libretro.vice_xpet/: addon.xml.in
game.libretro.vice_xpet/resources/: buttonmap.xml  settings.xml
(+158 files in other folders)
